- 12: Enh. #1066: Auto-complete suggestion precision for Calls improved <2>
- 12: Bugfix #1067: Further execution errors used to slip through <2>
- 12: Bugfix #1071: Analyser check for assignment errors had generated
      warnings on completely legal equality operator uses. <2>
- 12: Bugfix #1072: The FOR loop editor now warns on entering step keyword
      in end value field <2>

Version 3.32 (2021-09-19) requiring Java 11 or newer
- 01: Bugfix #851/2: SPECIAL-NAMES sections caused COBOL parser abort <2>
- 01: Bugfix #851/3: COBOL import flaws concerning floating-point literals <2>:
      - Decimal and float literals weren't recognised,
      - recognition / conversion of decimal commas implemented,
      - possible index range error during file preparation with fix format.
- 01: Bugfix #950: Synchronisation Arranger -> Arranger index went lost <2>
- 01: Bugfix #951: Import via source files dropping ignored import options <2>
- 02: Issue #954: STOP off button now disables rather removes breakpoints <2>
- 02: Bugfix #955: Several flaws on Java import with "class" literals, multi-
      catch clauses and try statements comprising several catch clauses. <2>
- 02: Issue #956: Java parsing ignored option "Import var declarations" <2>
- 02: Issue #957: "Processing" import now copes with import declarations <2>
- 02: Issue #958: Relative placing of special import/export option dialog <2>
- 02: Bugfix #959: Processing import now injects conversion functions and web
      colour literals in created diagram groups <2>
- 02: Issue #960: Processing import now declares standard system variables <2>
- 02: Bugfix #961: Java import did not detect/convert output instructions <2>
- 02: Bugfix #962: Constructor body import from Java sources often failed <2>
- 02: Substantial Italian localisation progress <Alessandro Simonetta et al.>
- 02: Localisations for plugin-specific import options added (DE, ES) <2>
- 02: Issue #964: Processing import placed a draw() loop without draw() <2>